fixed spacing between sections

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,6 @@ body {
 }
 
 #home {
-  margin: 1em;
   align-items: center;
   text-align: center;
   font-size: 2.5em;
