--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,8 +1,12 @@
+#projects {
+    margin-bottom: 10%;
+}
 .project-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
     margin-top: 20px;
     flex-wrap: wrap;
     width: 100%;
